@@ -98,14 +98,10 @@ class ZMPayments extends ZMObject {
     /**
      * Generate the JavaScript for the payment form validation.
      *
-     * @param boolean echo If <code>true</code>, echo the code.
      * @return string Fully formatted JavaScript incl. of wrapping &lt;script&gt; tag.
      */
-    function getPaymentsJavaScript($echo=ZM_ECHO_DEFAULT) {
-        $js = $this->zenModules_->javascript_validation();
-
-        if ($echo) echo $js;
-        return $js;
+    function getPaymentsJavaScript() {
+        return $this->zenModules_->javascript_validation();
     }
 
     /**
