@@ -26,7 +26,7 @@
 
 
 
-<?php $zm_theme->staticPageContent("main_page") ?> 
+<?php echo $zm_theme->staticPageContent("main_page") ?> 
 <?php $featured = ZMProducts::instance()->getFeaturedProducts(null, 4, false, $session->getLanguageId()); ?> 
 <h3>Featured Products</h3> 
 <div id="featured"> 
